# risc

./: .gitignore  .gitmodules  .scalafmt.conf  Makefile  README.md  build.sbt
arch/: Main.scala  main.scala  (+1 more)
sims/: .clang-tidy  CMakeLists.txt  Makefile  gen_awk.sh
sims/.cache/clangd/index/: cpu_sim.cc.4179B8BFA6ED1143.idx  cpu_sim.hh.3AB9377612C08EAB.idx  elf_loader.cc.172A80EDF7908749.idx  elf_loader.hh.6FCA2EBCD1E7DE19.idx  hex_loader.cc.DD842CB3D5C2B955.idx  hex_loader.hh.C57DE55AF4AE482E.idx  instruction.cc.7591C1A352212F63.idx  instruction.hh.AC47453A6964A377.idx  main.cc.2488B3A55E7A96A2.idx  memory.cc.56584BE683BD148F.idx  memory.hh.EC0A75AE1D1C4871.idx  trace.cc.473D0B36104FEE09.idx  trace.hh.69F7C0E6E14EEC90.idx
sims/cmake/: CompilerSetup.cmake  Dependencies.cmake  LibraryTargets.cmake  SourceCollections.cmake  config.cmake
sims/include/: cpu_sim.hh  demu.hh  elf_loader.hh  hex_loader.hh  instruction.hh  memory.hh  rvsim.hh  trace.hh
sims/include/demu/: config.hh  cpu_sim.hh  elf_loader.hh  logger.hh  memory.hh  retire_lane.hh  sim.hh  system_sim.hh  trace.hh
sims/include/demu/hal/: allocator.hh  device.hh  device_manager.hh  emu.hh  hal.hh  hardware.hh  ihardware.hh  interrupt.hh  memory.hh  port_handler.hh  rtl.hh
sims/include/demu/hal/axi/: manager.hh  memory.hh  signals.hh  slave.hh
sims/include/demu/hal/axifull/: manager.hh  memory.hh  signals.hh  slave.hh
sims/include/demu/hal/axilite/: manager.hh  memory.hh  port_handler.hh  signals.hh  slave.hh
sims/include/demu/hal/bus/: mmio.hh
sims/include/demu/hal/bus/axif/: interrupt.hh  port_handler.hh  signals.hh  slave.hh  sram.hh  uart.hh
sims/include/demu/hal/bus/axil/: interrupt.hh  memory.hh  port_handler.hh  signals.hh  slave.hh  sram.hh  uart.hh
sims/include/demu/hal/hardware/: memory.hh
sims/include/demu/hal/peripheral/dram/: dram.hh
sims/include/demu/hal/peripheral/gpio/: gpio.hh  port_handler.hh  signals.hh
sims/include/demu/hal/peripheral/interrupt/: interrupt.hh
sims/include/demu/hal/peripheral/sram/: port_handler.hh  signals.hh  sram.hh
sims/include/demu/hal/peripheral/timer/: timer.hh
sims/include/demu/hal/peripheral/uart/: uart.hh
sims/include/demu/hardware/: cpu.hh  memory.hh
sims/include/demu/isa/: isa.hh
sims/include/demu/isa/riscv32/: instruction.hh  typedefs.hh
sims/include/demu/isa/rv32i/: instr.hh  instruction.hh  typedefs.hh
sims/include/demu/isa/rv32im/: instruction.hh  typedefs.hh
sims/include/rvsim/: memory.hh  trace.hh
sims/lib/: cpu_sim.cc  elf_loader.cc  logger.cc  memory.cc  sim.cc  system_sim.cc  trace.cc
sims/lib/hal/: allocator.cc  bus_manager.cc  device_manager.cc  memory.cc
sims/lib/hal/axi/: manager.cc  memory.cc
sims/lib/hal/axifull/: manager.cc  memory.cc
sims/lib/hal/axilite/: manager.cc  memory.cc
sims/lib/hal/bus/axif/: interrupt.cc  sram.cc  uart.cc
sims/lib/hal/bus/axil/: interrupt.cc  memory.cc  sram.cc  uart.cc
sims/lib/hal/peripheral/sram/: sram.cc
sims/lib/hal/peripheral/uart/: uart.cc
sims/lib/hardware/: cpu.cc  memory.cc
sims/lib/isa/riscv32/: instruction.cc
sims/lib/isa/rv32i/: instr.cc  instruction.cc
sims/lib/isa/rv32im/: instruction.cc
sims/runtime/bare-metal/riscv32/: .gitignore  Makefile  linker.ld  start.S
sims/runtime/bare-metal/riscv32/dump/: test_basic_arithmetic.dump  test_basic_branch.dump  test_basic_csr.dump  test_basic_hazard.dump  test_basic_irh.dump  test_basic_jump.dump  test_basic_mem.dump  test_basic_mul.dump  test_basic_other.dump  test_c_func.dump  test_c_short_array.dump  test_c_short_loop.dump  test_c_uart.dump
sims/runtime/bare-metal/riscv32/hex/: test_basic_arithmetic.hex  test_basic_branch.hex  test_basic_csr.hex  test_basic_hazard.hex  test_basic_irh.hex  test_basic_jump.hex  test_basic_mem.hex  test_basic_mul.hex  test_basic_other.hex  test_c_func.hex  test_c_short_array.hex  test_c_short_loop.hex  test_c_uart.hex
sims/runtime/bare-metal/riscv32/src/: test_basic_arithmetic.asm  test_basic_branch.asm  test_basic_csr.asm  test_basic_div.asm  test_basic_hazard.asm  test_basic_irh.asm  test_basic_jump.asm  test_basic_mem.asm  test_basic_mul.asm  test_basic_other.asm  test_c_system.c  test_ref.asm
sims/runtime/riscv32/bare-metal/src/: test_basic_arithmetic.asm  test_basic_csr.asm  test_c_short_loop.c
sims/scripts/: bootstrap.sh
sims/src/: CMakeLists.txt  cpu_sim.cc  elf_loader.cc  hex_loader.cc  instruction.cc  main.cc  memory.cc  trace.cc
sims/tests/: CMakeLists.txt  Makefile  gshare_function_verification.md  linker.ld  start.S
sims/tests/asm/: test_5_stage_pipeline.asm  test_basic_arithmetic.asm  test_basic_branch.asm  test_basic_csr.asm  test_basic_hazard.asm  test_basic_jump.asm  test_basic_mem.asm  test_basic_mul.asm  test_basic_other.asm  test_basic_store.asm  test_c.c  test_c_short_array.c  test_c_short_loop.c  test_c_uart.c  test_gshare.asm  test_gshare_alias_thrash.asm  test_gshare_alternating.asm  test_gshare_bad_random.asm  test_gshare_c.c  test_gshare_correlated_dual.asm  test_gshare_good_pattern.asm  test_gshare_history10.asm  test_gshare_interleaved_independent.asm  test_gshare_lfsr_branchmix.asm  test_gshare_long_period.asm  test_gshare_loop_exit.asm  test_gshare_opt.c  test_gshare_vs_2bit_compare.asm
sims/tests/difftest/: lit.cfg.py  lit.site.cfg.py.in
sims/tests/difftest/riscv32/: add.asm  hello_world.c  long_vec_add.c  mmul.c  reduce_sum.c  short_vec_add.c
sims/tests/difftest/riscv32/m/: mul.asm
sims/tools/: CMakeLists.txt
sims/tools/cpu/: CMakeLists.txt  main.cpp
sims/tools/cpu/rv32i/: cpu_sim.cpp  cpu_sim.hpp  instruction.cpp  instruction.hpp
sims/tools/debugger/: CMakeLists.txt  breakpoint.cpp  breakpoint.hh  debugger.cpp  debugger.hh  main.cpp
sims/tools/difftest/: CMakeLists.txt  gdb_ref_model.hh  main.cpp  ref_model.hh
sims/tools/rv32i/: CMakeLists.txt  cpu_sim.cc  cpu_sim.cpp  cpu_sim.hh  instruction.cpp  main.cc  main.cpp
sims/tools/rv32i/cpu/: CMakeLists.txt  cpu_main.cpp  cpu_sim.cpp  cpu_sim.hpp
sims/tools/simulator/: CMakeLists.txt  main.cpp
sims/tools/system/: CMakeLists.txt  main.cpp  rv32i_system.vcd
(+290 files in other folders)
